spectec/test/elab/neg/parse-illegal-escape.spectec
;; A text literal contains an unrecognized escape sequence (`\q`).

"abc\qdef"
